--- a/profilytic-worker/src/templates/welcomeEmail.html
+++ b/profilytic-worker/src/templates/welcomeEmail.html
@@ -38,7 +38,7 @@
     }
     .footer {
       text-align: center;
-      padding: 20px 0;
+      padding: 20px;
       font-size: 12px;
       color: #aaaaaa;
     }
@@ -47,7 +47,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="cid:logo" alt="Profilytic Logo">
+      <img src="https://www.profilytic.com/_next/static/media/logo-horz-light.fffaac92.svg" alt="Profilytic Logo">
     </div>
     <div class="content">
       <h1>Welcome to Profilytic!</h1>
